fixed projects grid overflow

--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
 /* TODO:
-    * put icons on project cards
+    * adjust font sizes
+    * fix horizontal gap between project cards
     * jhey trick on project cards
     * modal on project view with pic of it
+    * clean this mess
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Raleway&family=Roboto:wght@300&display=swap');
+
+@font-face {
+  font-family: geist;
+  src: url(assets/fonts/Geist-Light.otf)
+}
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: geist;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 0.7fr 2fr 1fr;
+  grid-template-columns: 0.7fr 2fr 0.5fr;
 }
 
 .container > * {
@@ -22,6 +32,13 @@
 .container img {
   max-width: 50px;
   max-height: 50px;
+}
+
+.projects-title,
+.announcements-title,
+.trending p:first-child {
+  font-size: 1.26rem;
+  font-weight: bold;
 }
 
 .header {
@@ -84,10 +101,6 @@ input {
   grid-template-columns: 1fr;
   margin-left: 10px;
 }
-
-/* .greet-con p:nth-child(2) {
-  display: inline;
-} */
 
 .buttons {
   display: grid;
@@ -152,10 +165,11 @@ input {
   display: grid;
   /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
   grid-template-columns: 1fr 1fr;
-  /* grid-template-rows: 1fr 1fr 1fr; */
+  grid-template-rows: 0.3fr repeat(3, 1fr);
   /* grid-row: 2 / 3; */
   grid-column: 2 / 3;
   gap: 15px;
+  /* overflow-y: hidden; */
 }
 
 .projects-title {
@@ -163,20 +177,16 @@ input {
 }
 
 .project {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  max-height: 250px;
   padding: 30px;
-  width: 350px; /* provisional */
-  height: 200px;
 }
 
 .project p:first-child {
   font-size: 1.2rem;
   font-weight: bold;
 }
-
-/* .right-side {
-  grid-row: 2 / 3;
-  grid-column: 3;
-} */
 
 .project,
 .announcement,
@@ -186,15 +196,30 @@ input {
   margin-bottom: 5px;
 }
 
-/* .project,
-.announcements,
-.trending {
-  
-} */
+.project-icons {
+  align-self: end;
+  justify-self: end;
+} 
+
+.project-icons img {
+  margin-right: 20px;
+  max-width: 18px;
+  max-height: 18px;
+}
 
 .projects,
 .right-side {
-  background-color: aliceblue;
+  background-color: rgb(122, 178, 196);
+}
+
+.projects-title,
+.announcements-title {
+  transform: translateY(35px);
+}
+
+.projects,
+.right-side {
+  padding-top: 1px;
 }
 
 .announcements {
@@ -203,7 +228,7 @@ input {
   /* grid-template-rows: repeat(4, 1fr); */
   /* grid-column: 3; */
   /* grid-row: 2; */
-  transform: translateY(30px);
+  transform: translateY(45px);
 }
 
 .announcements-title {
@@ -247,8 +272,6 @@ input {
   grid-template-columns: 1fr 3fr;
   padding: 10px;
   padding-bottom: 0;
-  /* border: 1px solid red; */
-  /* height: fit-content; */
 }
 
 .profile p:first-of-type {
@@ -265,12 +288,3 @@ input {
   color:rgb(78, 86, 86);
   transform: translateY(-25px);
 }
-/* .item {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-} */
-
-/* .trending img {
-  max-width: 50px;
-  max-height: 50px;
-} */
